--- a/.github/workflows/runTests.yml
+++ b/.github/workflows/runTests.yml
@@ -153,7 +153,10 @@ jobs:
               cd azure/.test/infra && \
               ./run.apply.fg.sh
           "
-
+      # TODO:
+      # don't fail but check exit code
+      # if not ok: pull down all the log files
+      # if ok: get the badge 
 
 ###
 # The End.
