--- a/.github/workflows/list-env-branch.yml
+++ b/.github/workflows/list-env-branch.yml
@@ -11,8 +11,6 @@ on:
 jobs:
   check_env:
     runs-on: ubuntu-18.04
-      # TODO: checkout the correct release or branch
-      # copy that to the controller      
     steps:
       - name: Dump GitHub context
         # env:
@@ -31,9 +29,20 @@ jobs:
           echo "GITHUB_REF=$GITHUB_REF"
           echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}"
           echo "github.token=${{ github.token }}"
-      # - name: Checkout Repository
-      #   uses: actions/checkout@master
+      
+      - name: Checkout Current Branch
+        uses: actions/checkout@master
+        with: 
+          ref: ${{ github.ref }}
 
+      - name: List Workspace
+        run: |
+          cd $GITHUB_WORKSPACE
+          ls -la 
+          cd
+
+      # TODO: checkout the correct release or branch
+      # copy that to the controller      
 
 ###
 # The End.
