--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -43,17 +43,17 @@ env:
   TEST_ZONE: "1"
   TEST_VM_ADMIN_USERNAME: "controller"
 
-  TEST_AZURE_PROJECT_TAG: "${ TEST_CONTROLLER_ID }-sol-ci-ctrller"
-  TEST_AZURE_RESOURCE_GROUP: "${ TEST_CONTROLLER_ID }-sol-ci-ctrller-rg"
-  TEST_AZURE_DEPLOY_ARM_TEMPLATE: ./azure/.workflows/azure-deploy.json
-  TEST_BOOTSTRAP_SH: ./azure/.workflows/bootstrap.sh
-
 jobs:
   run_tests:
     runs-on: ubuntu-18.04
     outputs:
       publicIpAddress: ${{steps.azure_deploy.outputs.publicIPAddress}}
       resourceGroupName: ${{steps.azure_deploy.outputs.resourceGroupName}}
+    env:  
+      TEST_AZURE_PROJECT_TAG: "${ TEST_CONTROLLER_ID }-sol-ci-ctrller"
+      TEST_AZURE_RESOURCE_GROUP: "${ TEST_CONTROLLER_ID }-sol-ci-ctrller-rg"
+      TEST_AZURE_DEPLOY_ARM_TEMPLATE: ./azure/.workflows/azure-deploy.json
+      TEST_BOOTSTRAP_SH: ./azure/.workflows/bootstrap.sh
 
     steps:
       
