--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -101,18 +101,18 @@ jobs:
             --tags project=$AZURE_PROJECT_TAG \
             --verbose
       
-      - name: DEBUG - end fail
-        run: exit 1    
-      
       - name: Run ARM Deploy
         id: azure_deploy
         # https://github.com/marketplace/actions/deploy-azure-resource-manager-arm-template
         uses: azure/arm-deploy@v1.0.1
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
+          resourceGroupName: ${{ env.TEST_CONTROLLER_ID }}-${{ env.TEST_AZURE_PROJECT }}-rg
           template: ${{ env.AZURE_DEPLOY_ARM_TEMPLATE }}
-          parameters: vm_admin_public_key="${{ secrets.CONTROLLER_VM_PUBLIC_KEY }}" controller_id=${{ github.event.inputs.controller_id }} zone=${{ github.event.inputs.zone }} vm_admin_username=${{ github.event.inputs.vm_admin_username }}
+          parameters: vm_admin_public_key="${{ secrets.CONTROLLER_VM_PUBLIC_KEY }}" project_prefix=${{ env.TEST_CONTROLLER_ID }}-${{ env.TEST_AZURE_PROJECT }} zone=${{ env.TEST_ZONE }} vm_admin_username=${{ env.TEST_VM_ADMIN_USERNAME }}
+      
+      - name: DEBUG - end fail
+        run: exit 1    
       
       - name: Configure SSH
         run: |
