--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -45,7 +45,7 @@ env:
   TEST_AZURE_PROJECT: "solace-ctrller"
   TEST_AZURE_DEPLOY_ARM_TEMPLATE: "./azure/.workflows/azure-deploy.json"
   TEST_BOOTSTRAP_SH: "./azure/.workflows/bootstrap.sh"
-  TEST_CONTROLLER_REPO_DIR: ~/${{ env.GITHUB_REPOSITORY }}/${{ env.GITHUB_REF }} 
+  TEST_CONTROLLER_REPO_DIR: ~/${{ github.repository }}/${{ github.ref }} 
 
 jobs:
   run_tests:
