--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -170,7 +170,7 @@ jobs:
         # https://github.com/garygrossgarten/github-action-scp
         uses: garygrossgarten/github-action-scp@release
         with:
-          local: ${{ env.GITHUB_WORKSPACE }}
+          local: "./"
           remote: ${{ env.TEST_CONTROLLER_REPO_DIR }}
           recursive: true
           verbose: true
